# hy-ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
docs/: architecture.md  changelog.md  specification.md  timetracking.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: index.py
src/blueprint/: README.md  blueprint.json  blueprints.py  game_blueprint.py
src/data/: README.md  data.json  game_data.py  game_elements.py
src/game/: README.md  game.py
src/save/: README.md  example_save.json  save.py
src/state/: README.md  game_state.py  utils.py
src/tests/: constants.py  game_blueprint_test.py  game_data_test.py  game_state_inventory_test.py  game_state_test.py  gate_state_utils_test.py
src/ui/: README.md  assets.py  base_elements.py  elements.py  game_ui.py
src/ui/elements/: effects.py  hotbar.py  machine.py  tooltip.py
